--- a/笔记.md
+++ b/笔记.md
@@ -1,4 +1,12 @@
+## Jenkins 相关文档
 
+[Jenkinsdocs]  https://github.com/ihaiucom/Jenkinsdocs
+
+https://jenkins.io/zh/doc/book/pipeline/#scripted-pipeline-fundamentals
+
+[第十章-流水线实践(二)] https://github.com/ihaiucom/Jenkinsdocs/blob/master/chapter/第十章-流水线实践(二).md
+
+[流水线语法] https://jenkins.io/zh/doc/book/pipeline/syntax/
 
 
 
