--- a/笔记.md
+++ b/笔记.md
@@ -14,26 +14,32 @@ https://jenkins.io/zh/doc/book/pipeline/syntax/
 
 
 ## Jenkins Pipline 
-···
+
+```
 String workspace="D:/Jenkins/GameJJSG/"
 pipeline 
 {
    agent 
    {
-       custom
+       node 
+       {
+            label "master"
+            customWorkspace "${workspace}workspace" // 自定义在工作空间 
+       }
    }
 
    stages {
       stage('Hello') {
          steps {
             echo 'Hello World'
+            git credentialsId: '647b7b11-5185-4289-843d-77cc8dfbc945', url: 'git@github.com:ihaiucom/ihaiu.laya2-jenkins.git'
          }
       }
    }
 }
 
 
-···
+```
 
 
 ## 安装nodejs
