--- a/笔记.md
+++ b/笔记.md
@@ -23,10 +23,20 @@ pipeline
    {
        node 
        {
-            label "master"
-            customWorkspace "${workspace}workspace" // 自定义在工作空间 
+            label "master"						// 设置运行机器节点标签
+            customWorkspace "${workspace}" 		// 自定义在工作空间 
        }
    }
+
+   options 
+   {
+   		timestamps()  							// 日志会有时间
+	  	timeout(time: 20, unit: 'SECONDS') 		// 设置超时时间
+	  	retry(2)								// 设置重复次数
+	  	disableConcurrentBuilds()				// 不允许并发构建
+	  	skipDefaultCheckout true				// 删除隐试checkou scm语句
+	}
+
 
    stages {
       stage('Hello') {
