--- a/笔记.md
+++ b/笔记.md
@@ -192,3 +192,6 @@ node_modules\.bin\layaair2-cmd publish -c wxgame -w D:\zengfeng\githubs\ihaiu.la
 
 
 layaair2-cmd compile -w D:\zengfeng\githubs\ihaiu.laya2-jenkins\LayaGame24
+
+
+## 微信命令
