--- a/笔记.md
+++ b/笔记.md
@@ -194,4 +194,180 @@ node_modules\.bin\layaair2-cmd publish -c wxgame -w D:\zengfeng\githubs\ihaiu.la
 layaair2-cmd compile -w D:\zengfeng\githubs\ihaiu.laya2-jenkins\LayaGame24
 
 
-## 微信命令
+## 微信
+
+### 配置电脑环境变量
+
+* PATH加入微信小游戏目录 D:\Program Files (x86)\Tencent\微信web开发者工具
+* 重启Jenkins
+
+### 配置打开微信小游戏IDE
+
+* 打开等jenkins运行结束后ide就关闭了。还不知道怎么设置让他一直打开
+
+* learn_wx_cmd_open
+命令行打开微信小游戏IDE
+
+```
+pipeline {
+   agent any
+
+   stages {
+      stage('微信IDE--打开') {
+         steps {
+            bat label: '', script: 
+            '''
+            echo %PATH%
+            cli.bat --port 3000 -o D:/zengfeng/GameJJSGH5/client/client/GameWX/wxgame 
+            '''
+         }
+      }
+   }
+}
+
+```
+
+
+* learn_wx_bat_open
+使用外部bat文件打开微信IDE
+
+```
+pipeline {
+   agent any
+
+   stages {
+      stage('微信IDE--打开') {
+         steps {
+            bat label: '', script: 
+            '''
+            echo %JENKINS_HOME%/../cmd
+            cd %JENKINS_HOME%/../cmd
+            cli_open.bat
+            '''
+         }
+      }
+   }
+}
+
+```
+
+
+D:\Jenkins\cmd\cli_open.bat
+
+```
+rem https://developers.weixin.qq.com/miniprogram/dev/devtools/cli.html
+set PATH=%PATH%;D:\Program Files (x86)\Tencent\微信web开发者工具
+rem echo %PATH%
+cli.bat --port 3000 -o
+pause
+
+```
+
+
+
+
+### 配置微信小游戏登录
+* learn_wx_cmd_login
+微信IDE--登录
+
+
+```
+pipeline {
+   agent any
+
+   stages {
+      stage('微信IDE--登录') {
+         steps {
+            bat label: '', script: 
+            '''
+            (
+                echo '<a target="_blank" href="http://127.0.0.1:3000/login">http://127.0.0.1:3000/login</a>'
+            	cli --port 3000 -o
+            	cli -l  --login-qr-output base64
+            	
+            )
+            '''
+         }
+      }
+   }
+}
+```
+
+
+
+
+
+
+### 配置微信小游戏发布
+
+
+```
+
+pipeline {
+   agent any
+
+   stages {
+      stage('微信IDE--打开') {
+         steps {
+            bat label: '', script: 
+            '''
+            echo %PATH%
+            cli.bat --port 3000 -o D:/zengfeng/GameJJSGH5/client/client/GameWX/wxgame 
+            '''
+         }
+      }
+      
+      
+      stage('微信IDE--上传') {
+         steps {
+            bat label: '', script: 
+            '''
+            cli.bat -u 1.0.0@D:/zengfeng/GameJJSGH5/client/client/GameWX/wxgame --upload-desc 'initial release' --upload-info-output D:/zengfeng/githubs/ihaiu.laya2-jenkins/_learn_wxgame/info.json
+            '''
+         }
+      }
+   }
+}
+
+
+```
+
+
+## Jenkins 相关插件
+* AnsiColor 日志颜色
+
+## Jenkins 中文乱码
+
+[Jenkins控制台日志出现中文乱码解决方法]
+https://blog.csdn.net/chenzhi5174/article/details/100718991
+
+[解决jenkins控制台中文乱码问题]
+https://www.cnblogs.com/gaigaige/p/6835084.html
+
+## Jenkins 启动支持中文
+
+
+```
+set JENKINS_HOME=%cd%/.jenkins
+echo %JENKINS_HOME%
+java -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -jar jenkins.war --httpPort=9090
+pause
+```
+
+
+
+## Jenkins 设置支持html
+https://www.bilibili.com/video/av52163638?p=7
+
+
+* http://localhost:9090/configure
+Default Content Type ： HTML (text/html)
+
+* http://localhost:9090/configureSecurity/
+Markup Formatter ： Safe HTML
+
+
+
+
+## Jenkins Email 邮件通知
+https://www.bilibili.com/video/av52163638?p=8
