--- a/笔记.md
+++ b/笔记.md
@@ -344,6 +344,9 @@ https://blog.csdn.net/chenzhi5174/article/details/100718991
 [解决jenkins控制台中文乱码问题]
 https://www.cnblogs.com/gaigaige/p/6835084.html
 
+* 进入【系统管理】->【系统设置】->全局属性：KEY: LANG; VALUE:zh.CH.UTF-8
+* java -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -jar jenkins.war --httpPort=9090
+
 ## Jenkins 启动支持中文
 
 
@@ -371,3 +374,85 @@ Markup Formatter ： Safe HTML
 
 ## Jenkins Email 邮件通知
 https://www.bilibili.com/video/av52163638?p=8
+
+### QQ邮箱为例
+* 打开qq邮箱设置->账号->POP3/IMAP/SMTP
+* 开启POP3/SMTP服务，需要发送短信验证。 发送完成会有一个授权码： hfwszfdhrmxhchhh
+* 发件服务： pop.qq.com：995
+* 收件服务:  smtp.qq.com:465
+
+### 配置系统管理员Email
+* http://10.0.127.162:9090/configure
+* Jenkins Location
+* 系统管理员邮件地址: 3606707769@qq.com
+
+### 配置邮件通知
+* http://10.0.127.162:9090/configure
+* 邮件通知
+* SMTP服务器: smtp.qq.com
+* 用户默认邮件后缀: @qq.com
+* 勾选: 使用SMTP认证
+* 用户名: 3606707769@qq.com
+* 密码: hfwszfdhrmxhchhh
+* 勾选: 使用SSL协议
+* SMTP端口: 465
+* 字符集: UTF-8
+
+### Extended E-mail Notification, 在使用Pipeline发送邮件时这也要配置
+* http://10.0.127.162:9090/configure
+* Extended E-mail Notification
+* SMTP server: smtp.qq.com
+*  Default user E-mail suffix: @qq.com
+* 勾选: Use SMTP Authentication
+* User Name: 3606707769@qq.com
+* Password: hfwszfdhrmxhchhh
+* 勾选: Use SSL
+* SMTP端口: 465
+* 字符集: UTF-8
+
+
+
+### 测试Pipeline 发送邮件
+
+*  learn_pipeline_email_send
+
+```
+pipeline {
+   agent any
+
+   stages 
+   {
+      stage('Hello') {
+         steps {
+            emailext body: '测试pipeline 发生Email, 测试pipeline 发生Email', subject: '测试pipeline 发生Email', to: 'fengzeng@123u.com'
+         }
+      }
+   }
+      
+      
+   post 
+   {
+       
+        success 
+        {
+         script
+         {
+    
+            currentBuild.description = "构建成功"
+            echo "success 只有当前流水线或阶段的完成状态为success，才允许在 post 部分运行该步骤, 通常web UI是蓝色或绿色。"
+                emailext body: '构建成功 测试pipeline 发生Email, 测试pipeline 发生Email <a href="http://10.0.127.162:9090"/>http://10.0.127.162:9090/</a>', subject: '构建成功 测试pipeline 发生Email', to: 'fengzeng@123u.com'
+         }
+        }
+   }
+}
+
+```
+
+
+
+
+## Jenkins 允许用户注册
+http://10.0.127.162:9090/configureSecurity/
+
+
+
