--- a/笔记.md
+++ b/笔记.md
@@ -456,3 +456,69 @@ http://10.0.127.162:9090/configureSecurity/
 
 
 
+## Jenkins 配置共享库
+* 先添加凭据
+* 到系统管理 http://10.0.127.162:9090/configure
+* Global Pipeline Libraries
+* Name: learn_jenkins_share_lib
+* Default version: master
+* 勾选 Modern SCM
+* 勾选 GitHub
+* 选择凭据
+* 勾选 仓库的 HTTPS 地址
+* 仓库的 HTTPS 地址： https://github.com/ihaiucom/learn.jenkins_share_lib.git
+
+
+
+## Jenkins 打印环境变量
+
+```
+pipeline {
+   agent any
+
+   stages {
+      stage('bat echo env') {
+         steps {
+             bat label: '', script: 
+             '''
+                echo "JOB_NAME:"  %JOB_NAME%
+                echo "WORKSPACE:"  %WORKSPACE%
+                echo "PATH_LAYA_PROJECT_TEST:"  %PATH_LAYA_PROJECT_TEST%
+            '''
+         }
+      }
+      stage('echo env') {
+         steps {
+            echo env.WORKSPACE
+         }
+      }
+   }
+}
+
+
+```
+
+
+## Jenkins 获取构建人信息
+
+[Jenkins获取构建人信息]
+https://blog.csdn.net/weixin_41402059/article/details/83063564
+
+
+
+[Jenkins获取运行job的用户名]
+https://www.cnblogs.com/honeybee/p/6525322.html
+
+[user build vars]
+https://plugins.jenkins.io/build-user-vars-plugin/
+
+
+
+
+## Groovy语法
+
+[Jenkins pipeline 2 -- Groovy语法介绍] 
+https://cloud.tencent.com/developer/article/1460199
+
+[Groovy 教程] 
+https://www.w3cschool.cn/groovy/
