--- a/笔记.md
+++ b/笔记.md
@@ -517,8 +517,71 @@ https://plugins.jenkins.io/build-user-vars-plugin/
 
 ## Groovy语法
 
+[Groovy API]
+
+http://www.groovy-lang.org/gdk.html
+
+
 [Jenkins pipeline 2 -- Groovy语法介绍] 
 https://cloud.tencent.com/developer/article/1460199
 
 [Groovy 教程] 
 https://www.w3cschool.cn/groovy/
+
+https://cloud.tencent.com/developer/chapter/18236
+
+[VS Code - 撰寫及執行 Groovy] 
+https://blog.johnwu.cc/article/vscode-groovy.html
+
+### groovyConsole
+
+groovyConsole是一个用Groovy写的图形化的GUI，非常简洁好用。
+Ctrl+R 执行窗口代码，如果有代码段被选中则执行选中的代码。
+Ctrl+W 清空输出面板。默认不清空，可以在菜单-View里勾选"Auto Clean Output On Run"在每次执行前自动清空。默认每行代码都打印到输出面板，可以在菜单-View里取消勾选"Show Script in output"。
+Ctrl+L 编译，语法错误很容易就爆出来了哦。
+Ctrl+I 查看最后运行的表达式的对象信息，包括所在类的所有方法。
+Ctrl+J 查看最后运行的代码里的所有变量信息，和所在类的所有方法。
+Ctrl+T 查看生成的抽象语法树（AST）的类。
+如果程序执行时间比较长，想要终止程序，记得在菜单--Script里勾选"Allow Interruption"，否则点击"Interrupt Running Script"是没有用的。
+面板最下面一行是状态显示栏，左边显示程序执行情况，最右边是光标所在的row:column
+一般的小脚本不需要导入jar包，如果需要外部jar包的时候，通过菜单--Script里的"add jar to classpath"或者"add directory to classpath"就可以使用了，不过这个在每次打开的时候都需要设置，所以如果是常用的jar包，可以直接把它们放到groovy的lib目录里面这样每次启动的时候都会自动加载。
+
+
+## code runner
+
+
+* 中文乱码问题
+
+.vscode/settings.json
+
+```
+{
+    "code-runner.runInTerminal": true, // code-runner 中文乱码问题
+}
+```
+
+
+
+
+### code runner 运行TypeScript
+
+需要安装ts-node
+
+```
+cnpm install -g ts-node
+```
+
+https://npm.taobao.org/package/ts-node
+
+
+### code runner 运行C#
+
+https://www.katacoda.com/courses/dotnet-in-docker/scriptcs-playground
+
+## choco
+
+[choco入门]
+https://www.cnblogs.com/mu-zhang/p/10545388.html
+
+https://chocolatey.org/docs/installation
+
