--- a/笔记.md
+++ b/笔记.md
@@ -513,6 +513,11 @@ https://www.cnblogs.com/honeybee/p/6525322.html
 https://plugins.jenkins.io/build-user-vars-plugin/
 
 
+##  Jenkins 执行脚本遇到权限问题
+
+https://blog.csdn.net/lb245557472/article/details/89520527
+
+安装 Permissive Script Security Plugin 插件，启动Jenkins时加参数 -Dpermissive-script-security.enabled=true ，再运行就不会报错了
 
 
 ## Groovy语法
@@ -532,6 +537,10 @@ https://cloud.tencent.com/developer/chapter/18236
 
 [VS Code - 撰寫及執行 Groovy] 
 https://blog.johnwu.cc/article/vscode-groovy.html
+
+
+[Groovy api] 
+https://tool.oschina.net/apidocs/apidoc?api=groovy
 
 ### groovyConsole
 
